Кнопка "перейти в орг-цию" в профиле

--- a/serviceDesk_client/src/main/resources/views/MainStylesheet.css
+++ b/serviceDesk_client/src/main/resources/views/MainStylesheet.css
@@ -60,6 +60,8 @@
 .text-green-link {
     -fx-font-size: 18;
     -fx-fill: #00D29D;
+    -fx-cursor: hand;
+    -fx-font-weight: bold;
 }
 
 .navigation-menu {
