--- a/serviceDesk_client/src/main/resources/views/MemberProfileScreen.fxml
+++ b/serviceDesk_client/src/main/resources/views/MemberProfileScreen.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -48,7 +49,7 @@
    <center>
       <Pane prefHeight="500.0" prefWidth="1100.0" BorderPane.alignment="CENTER">
          <children>
-            <Text layoutX="133.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title-text" text="Мой профиль" />
+            <Text layoutX="131.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title-text" text="Мой профиль" />
             <AnchorPane layoutX="133.0" layoutY="80.0" prefHeight="557.0" prefWidth="1100.0" styleClass="pane-borders">
                <children>
                   <Button fx:id="ChangeProfileButton" defaultButton="true" layoutX="499.0" layoutY="99.0" mnemonicParsing="false" onAction="#ChangeProfile" prefHeight="0.0" styleClass="main-button-v2" text="Редактировать профиль" AnchorPane.rightAnchor="351.0" AnchorPane.topAnchor="99.0" />
@@ -80,6 +81,11 @@
                   <Text fx:id="Knopka" layoutX="191.0" layoutY="452.0" onMouseClicked="#MyOrganisationClicked" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-green-link" text="Перейти в профиль организации" underline="true" wrappingWidth="191.67578125" />
                </children>
             </AnchorPane>
+            <Label layoutX="30.0" layoutY="44.0" onMouseClicked="#PreviousScreenButtonClicked" prefHeight="110.0" prefWidth="75.0" styleClass="previous-screen-button" text="&lt;" textAlignment="RIGHT">
+               <font>
+                  <Font size="100.0" />
+               </font>
+            </Label>
          </children>
          <BorderPane.margin>
             <Insets />
