--- a/serviceDesk_client/src/main/resources/views/MainStylesheet.css
+++ b/serviceDesk_client/src/main/resources/views/MainStylesheet.css
@@ -141,14 +141,15 @@
 }
 
 .tab-pane {
-    -fx-border-width: 2;
-    -fx-border-color: #302E2E;
+    -fx-border-width: 0 3 3 3;
+    -fx-border-color: #EBEBEB;
     -fx-background-radius: 5;
-    -fx-border-radius: 5;
+    -fx-border-radius: 3;
     -fx-text-fill: #ffffff;
 }
 
-.jfx-tab-pane {
+.jfx-tab-pane
+{
     -fx-border-width: 2;
     -fx-border-color: #302E2E;
     -fx-background-radius: 5;
@@ -236,7 +237,12 @@
     -fx-background-color: #ebebeb;
     -fx-background-insets: 0.0;
     -fx-background-radius: 0.0;
-    -fx-padding: 10 45 10 45;
+    -fx-padding: 10 33 10 33;
+
+    -fx-border-width: 4 0 0 0;
+    -fx-border-radius: 4;
+    -fx-border-color: #EBEBEB;
+
 }
 
 .tab:selected
@@ -244,7 +250,7 @@
     -fx-background-color: #ffffff;
     -fx-background-radius: 0;
     -fx-background-insets: 0;
-    -fx-border-width: 2 2 0 0;
+    -fx-border-width: 4 0 0 0;
     -fx-border-radius: 4;
     -fx-border-color: #7d2e7e;
 }
@@ -256,7 +262,27 @@
 
 .tab-pane *.tab-header-background
 {
-    -fx-background-color: transparent;
+    -fx-background-color: #EBEBEB;
+}
+
+.tab-pane:top *.tab-header-area
+{
+    -fx-background-insets: 0 0 0 10;
+    -fx-padding: 0.0em 0.0em 0.0em 0.0em;
+    -fx-font-size: 15;
+}
+
+.tab:selected .focus-indicator
+{
+    -fx-focus-color: transparent;
+    -fx-border-color: transparent;
+}
+
+.add-compendiums-button
+{
+    -fx-font-size: 15;
+    -fx-background-color: #00D29D;
+    -fx-text-fill: #000000;
 
 
 }
