--- a/serviceDesk_client/src/main/resources/views/DeveloperCompendiumScreen.fxml
+++ b/serviceDesk_client/src/main/resources/views/DeveloperCompendiumScreen.fxml
@@ -56,10 +56,10 @@
    <center>
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <AnchorPane prefHeight="63.0" prefWidth="1366.0">
+            <AnchorPane prefHeight="60.0" prefWidth="1366.0">
                <children>
-                  <Text layoutX="120.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title-text" text="Справочники" wrappingWidth="294.41939544677734" />
-                  <Line endX="-1.6" endY="1.5" layoutX="250.0" layoutY="58.0" startX="-126.0" startY="1.5" stroke="#7d2e7e" strokeLineCap="ROUND" strokeWidth="5.0" />
+                  <Text layoutX="42.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title-text" text="Справочники" wrappingWidth="294.41939544677734" />
+                  <Line endX="-1.6" endY="1.5" layoutX="172.0" layoutY="58.0" startX="-126.0" startY="1.5" stroke="#7d2e7e" strokeLineCap="ROUND" strokeWidth="5.0" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="550.0" prefWidth="1366.0">
@@ -249,7 +249,7 @@
    <left>
       <AnchorPane prefHeight="704.0" prefWidth="62.0" BorderPane.alignment="CENTER">
          <children>
-            <Label layoutX="2.0" layoutY="50.0" prefHeight="110.0" prefWidth="75.0" styleClass="previous-screen-button" text="&lt;" />
+            <Label layoutX="2.0" layoutY="50.0" onMouseClicked="#PreviousScreenButtonClicked" prefHeight="110.0" prefWidth="75.0" styleClass="previous-screen-button" text="&lt;" />
          </children>
       </AnchorPane>
    </left>
