--- a/serviceDesk_client/src/main/resources/views/MainStylesheet.css
+++ b/serviceDesk_client/src/main/resources/views/MainStylesheet.css
@@ -283,6 +283,28 @@
     -fx-font-size: 15;
     -fx-background-color: #00D29D;
     -fx-text-fill: #000000;
+}
 
+.create-object-TextField
+{
+    -fx-border-width: 1.5 1.5 1.5 1.5;
+    -fx-border-color: #7d2e7e;
+    -fx-border-radius: 4;
+}
 
+.create-object-ChoiceBox
+{
+    -fx-border-width: 1.5 1.5 1.5 1.5;
+    -fx-border-color: #7d2e7e;
+    -fx-border-radius: 4;
+}
+
+.create-object-ChoiceBox
+{
+    -fx-background-color: transparent;
+}
+
+.create-object-ChoiceBox .open-button .arrow
+{
+    -fx-background-color: #7d2e7e;
 }
