--- a/serviceDesk_client/src/main/resources/views/CreateTicketScreen.fxml
+++ b/serviceDesk_client/src/main/resources/views/CreateTicketScreen.fxml
@@ -10,25 +10,25 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="680.0" prefWidth="840.0" styleClass="main-pane" stylesheets="@MainStylesheet.css" xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1" fx:controller="team.dna2.serviceDesk_client.controllers.CreateTicketScreenController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="680.0" prefWidth="840.0" styleClass="main-pane" stylesheets="@MainStylesheet.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="team.dna2.serviceDesk_client.controllers.CreateTicketScreenController">
    <top>
       <AnchorPane prefHeight="605.0" prefWidth="840.0" BorderPane.alignment="CENTER">
          <children>
             <Text layoutX="293.0" layoutY="51.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title-text" text="Создание обращения" textAlignment="CENTER" />
             <Text layoutX="95.0" layoutY="125.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="big-description-text" text="Тема обращения*" />
-            <TextField fx:id="TitleField" layoutX="95.0" layoutY="135.0" prefWidth="650.0" promptText="Не менее 10 символов" styleClass="text-field">
+            <TextField fx:id="TitleField" layoutX="95.0" layoutY="135.0" prefWidth="650.0" promptText="Не менее 10 символов" styleClass="create-object-TextField">
                <font>
                   <Font size="16.0" />
                </font>
             </TextField>
             <Text layoutX="95.0" layoutY="200.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="big-description-text" text="Тип обращения*" />
-            <ChoiceBox fx:id="CategoryBox" layoutX="95.0" layoutY="210.0" prefHeight="25.0" prefWidth="650.0" />
+            <ChoiceBox fx:id="CategoryBox" layoutX="95.0" layoutY="210.0" prefHeight="25.0" prefWidth="650.0" styleClass="create-object-ChoiceBox" />
             <Text layoutX="95.0" layoutY="270.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="big-description-text" text="Наименование ПО*" />
-            <ChoiceBox fx:id="SoftwareBox" layoutX="95.0" layoutY="280.0" onAction="#SoftwareBoxChanged" prefHeight="25.0" prefWidth="650.0" />
+            <ChoiceBox fx:id="SoftwareBox" layoutX="95.0" layoutY="280.0" onAction="#SoftwareBoxChanged" prefHeight="25.0" prefWidth="650.0" styleClass="create-object-ChoiceBox" />
             <Text layoutX="95.0" layoutY="340.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="big-description-text" text="Функциональный модуль ПО" />
-            <ChoiceBox fx:id="ModuleBox" layoutX="95.0" layoutY="350.0" prefHeight="25.0" prefWidth="650.0" />
+            <ChoiceBox fx:id="ModuleBox" layoutX="95.0" layoutY="350.0" prefHeight="25.0" prefWidth="650.0" styleClass="create-object-ChoiceBox" />
             <Text layoutX="95.0" layoutY="405.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="big-description-text" text="Описание" />
-            <TextArea fx:id="DescriptionTextArea" layoutX="95.0" layoutY="415.0" prefHeight="180.0" prefWidth="650.0" promptText="Дополнительная информация по обращению" wrapText="true">
+            <TextArea fx:id="DescriptionTextArea" layoutX="95.0" layoutY="415.0" prefHeight="180.0" prefWidth="650.0" promptText="Дополнительная информация по обращению" styleClass="create-object-TextField" wrapText="true">
                <font>
                   <Font size="16.0" />
                </font>
@@ -49,4 +49,7 @@
          </BorderPane.margin>
       </Button>
    </bottom>
+   <center>
+      <AnchorPane prefHeight="46.0" prefWidth="840.0" BorderPane.alignment="CENTER" />
+   </center>
 </BorderPane>
