--- a/serviceDesk_client/src/main/resources/views/CreateTicketScreen.fxml
+++ b/serviceDesk_client/src/main/resources/views/CreateTicketScreen.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -33,6 +34,7 @@
                   <Font size="16.0" />
                </font>
             </TextArea>
+            <Label layoutY="82.0" styleClass="previous-screen-button" text="&lt;" />
          </children>
       </AnchorPane>
    </top>
