Fix Prev.Scr.But. on Add. Screen, close windows

--- a/serviceDesk_client/src/main/resources/views/CreateTicketScreen.fxml
+++ b/serviceDesk_client/src/main/resources/views/CreateTicketScreen.fxml
@@ -34,7 +34,7 @@
                   <Font size="16.0" />
                </font>
             </TextArea>
-            <Label layoutY="82.0" styleClass="previous-screen-button" text="&lt;" />
+            <Label layoutY="82.0" styleClass="previous-screen-button" text="&lt;" onMouseClicked="#PreviousScreenButtonClicked"/>
          </children>
       </AnchorPane>
    </top>
