--- a/serviceDesk_client/src/main/resources/views/CreateTypeScreen.fxml
+++ b/serviceDesk_client/src/main/resources/views/CreateTypeScreen.fxml
@@ -44,7 +44,11 @@
                 <Label layoutX="60.0" layoutY="40.0" styleClass="big-description-text" text="Название*" />
                 <Label layoutX="60.0" layoutY="200.0" styleClass="big-description-text" text="Описание" />
                 <TextField fx:id="TypeNameField" layoutX="60.0" layoutY="70.0" prefHeight="35.0" prefWidth="600.0" promptText="Не менее 10 символов" styleClass="create-object-TextField" />
-            <TextArea fx:id="TypeDescriptionArea" layoutX="60.0" layoutY="230.0" prefHeight="240.0" prefWidth="600.0" promptText="Дополнительная информация по типу обращения" styleClass="create-object-TextField" />
+            <TextArea fx:id="TypeDescriptionArea" layoutX="60.0" layoutY="230.0" prefHeight="240.0" prefWidth="600.0" promptText="Дополнительная информация по типу обращения" styleClass="create-object-TextField">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </TextArea>
             </children>
         </AnchorPane>
     </center>
